Atualizando fotos avatar para os membros da equipe sem foto e o texto da Nathália Machado

--- a/templates/content/pt-br/equipe.html
+++ b/templates/content/pt-br/equipe.html
@@ -72,7 +72,7 @@
 
 <div class="item">
   <h3>Bruno Ribeiro</h3>
-  <img src=""/>
+  <img src="{{static_url}}/images/equipe/masculino.png"/>
   <p align="justify"> É biólogo, mestre em Ecologia e Evolução pela Universidade Federal de Goiás - UFG (2016). Sua experiência está relacionada com a avaliação da vulnerabilidade de espécies às mudanças climáticas e prioridades para conservação, com foco na Amazônia brasileira. No CNCFlora é analista do Núcleo Planejamento Espacial para Conservação ⎼ sob a coordenação do Prof. Rafael Loyola, diretor do Laboratório de Biogeografia da Conservação (CB-Lab/UFG) ⎼ onde participa de todos os processos envolvidos nas análises de paisagem e priorização espacial para a conservação da flora ameaçada de extinção, da redação de artigos científicos e de documentos técnicos ou de divulgação científica. Bruno gosta de literatura, meditação, estar com sua família e amigos, tocar uma boa música com seu violão e mantém a identificação de plantas como um passatempo!<br/><br/>
     <strong><a href="http://lattes.cnpq.br/4793431181653951" target="_blank">Currículo lattes</a></strong><br />
     <strong>Email:</strong> bruno.ribeiro@cncflora.net<br/>
@@ -81,7 +81,7 @@
 
 <div class="item">
   <h3>Caio Baez Gomes</h3>
-  <img src=""/>
+  <img src="{{static_url}}/images/equipe/masculino.png"/>
   <p align="justify"> É biólogo, formado pela Pontifícia Universidade Católica do Rio de Janeiro - PUC/Rio (2015). Sua experiência concentra-se na área de botânica, com ênfase em inventários florísticos e fitossociológicos da flora de campos de altitude e de florestas altomontanas do estado do Rio de Janeiro. No CNCFlora divide a sua função de analista entre os Núcleos Lista Vermelha e Inventário Florístico em Áreas Prioritárias, participando de todos os processos envolvidos na análise de dados e avaliação de risco de extinção da flora brasileira, da redação de artigos científicos e de documentos técnicos ou de divulgação científica. Ele ainda é responsável por organizar e planejar as expedições à campo e pela coleta e determinação do material botânico. Caio adora fazer trilhas, subir montanhas, andar de bicicleta e mergulhar!<br/><br/><br/>
     <strong><a href="http://lattes.cnpq.br/9726906288362684" target="_blank">Currículo lattes</a></strong><br />
     <strong>Email:</strong> caiobg@cncflora.net<br/>
@@ -107,7 +107,7 @@
 
 <div class="item">
   <h3>Elsie Franklin Guimarães</h3>
-  <img src=""/>
+  <img src="{{static_url}}/images/equipe/feminino.png"/>
   <p align="justify"> É bióloga (formada em História Natural), doutora em Botânica pelo Museu Nacional  - UFRJ (2002). Sua experiência concentra-se na área de botânica, com ênfase em taxonomia e sistemática de Piperaceae, Gentianaceae e Trigoniaceae e em estudos de floras. É docente credenciada da Escola Nacional de Botânica Tropical - ENBT/JBRJ e pesquisadora aposentada, atualmente voluntária, do Instituto de Pesquisas Jardim Botânico do Rio de Janeiro. No CNCFlora desempenha a função de analista do Núcleo Inventário Florístico em Áreas Prioritárias, onde é responsável pela identificação das amostras botânicas coletadas durante as expedições à campo. Elsie gosta de identificar e elaborar chave de identificação de plantas, conhecer a flora brasileira, orientar alunos, receber a família e os amigos em casa, além de dançar e ir ao cinema, teatro e festas!<br /><br />
   <strong>
     <a href="http://lattes.cnpq.br/5656931947739389">Currículo lattes</a>
@@ -127,15 +127,15 @@
 
 <div class="item">
   <h3>Humberto Margon</h3>
-  <img src=""/>
-  <p align="justify"> É geógrafo, formado pela Pontifícia Universidade Católica do Rio - PUC/Rio (2006), especialista em geoprocessamento e gestão de banco de dados geoespacias. No CNCFlora desempenha a função de analista do Núcleo Sistemas, participando da gestão da base de dados espaciais que subsidia os processos e análises dos demais Núcleos, da organização de dados e metadados espaciais, da aferição de precisão e do georreferenciamento dos registros de ocorrência, da elaboração de mapas e da prospecção de novas geotecnologias. Humberto ama viajar, aprecia uma boa comida e tem um especial interesse em cervejas artesanais!<br/><br/>
+  <img src="{{static_url}}/images/equipe/masculino.png"/>
+  <p align="justify"> É geógrafo, formado pela Pontifícia Universidade Católica do Rio - PUC/Rio (2006), especialista em geoprocessamento e gestão de banco de dados geoespacias. No CNCFlora desempenha a função de analista do Núcleo Sistemas, participando da gestão da base de dados espaciais que subsidia os processos e análises dos demais Núcleos, da organização de dados e metadados espaciais, da aferição de precisão e do georreferenciamento dos registros de ocorrência, da elaboração de mapas e da prospecção de novas geotecnologias. Humberto ama viajar, aprecia uma boa comida e tem um especial interesse em cervejas artesanais!<br/><br/><br/><br/>
     <strong>Email:</strong> humberto@cncflora.net
   </p>
 </div>
 
 <div class="item">
   <h3>Ícaro de Carvalho</h3>
-  <img src=""/>
+  <img src="{{static_url}}/images/equipe/masculino.png"/>
   <p align="justify"> É cientista da computação, formado pela Universidade Federal Fluminense - UFF (2016). Sua experiência está relacionada ao desenvolvimento web, mobile e em metodologias ágeis. Seu trabalho de conclusão de curso foi em computação gráfica e, atualmente, tem interesse em pesquisar modelos gráficos para visualização de informação/dados que possam atender inúmeras áreas de estudo, não apenas para informática. No CNCFlora desempenha a função de analista do Núcleo Sistemas, onde é responsável pela criação e desenvolvimento do portal CNCFlora; pelo desenvolvimento de sistemas, informatização, implementação e gerenciamento de dados e infraestrutura de tecnologia. Ícaro também é jogador de rugby e como todo programador, adora um bom café!<br/><br/><br/>
     <strong>Email:</strong> icaro@cncflora.net
   </p>
@@ -179,7 +179,7 @@
 
 <div class="item">
   <h3>Melissa Bocayuva</h3>
-  <img src=""/>
+  <img src="{{static_url}}/images/equipe/feminino.png"/>
   <p align="justify"> É bióloga, doutora em Botânica pela Universidade Federal de Viçosa - UFV (2012) com pós-doutorado pela mesma universidade. Sua experiência concentra-se na área de botânica e microbiologia, com ênfase em taxonomia, ecologia e conservação de Orchidaceae, biologia e fisiologia dos microrganismos. No CNCFlora desempenha a função de analista do Núcleo Planejamento de Ações, participando de todos os processos envolvidos na elaboração de estratégias de conservação para a flora ameaçada de extinção, da redação de artigos científicos e de documentos técnicos ou de divulgação científica. Também participa de expedições à campo para coletar material botânico, identificar e registrar as ameaças incidentes sobre a flora.
   <br /><br /><br/>
     <strong><a href="http://lattes.cnpq.br/7249624264500739" target="_blank">Currículo lattes</a></strong><br/>
@@ -190,14 +190,14 @@
 <div class="item">
   <h3>Nathália Machado</h3>
   <img src="{{static_url}}/images/equipe/nathalia.jpg"/>
-  <p align="justify"> É bióloga, doutora em Ecologia e Evolução pela Universidade Federal de Goiás - UFG (2014) e pós-doutoranda do Laboratório de Biogeografia da Conservação (CB-Lab/UFG). Sua experiência está relacionada com a área de priorização espacial para conservação da biodiversidade e avaliação risco de extinção. No CNCFlora é analista do Núcleo Planejamento Espacial para Conservação ⎼ sob a coordenação do Prof. Rafael Loyola, diretor do CB-Lab/UFG ⎼ onde participa de todos os processos envolvidos nas análises de priorização espacial para a conservação da flora ameaçada de extinção, da elaboração de estratégias de conservação, da organização de livros, da redação de artigos científicos e de documentos técnicos ou de divulgação científica. Nathália adora viajar, dançar forró e fazer observação de aves!<br/><br/><br/><br/>
+  <p align="justify"> É bióloga, doutora em Ecologia e Evolução pela Universidade Federal de Goiás - UFG (2014) e pós-doutoranda do Laboratório de Biogeografia da Conservação (CB-Lab/UFG). Sua experiência está relacionada com a área de priorização espacial para conservação da biodiversidade e avaliação risco de extinção. No CNCFlora é analista do Núcleo Planejamento Espacial para Conservação ⎼ sob a coordenação do Prof. Rafael Loyola, diretor do CB-Lab/UFG ⎼ onde participa de todos os processos envolvidos nas análises de priorização espacial para a conservação da flora ameaçada de extinção, da elaboração de estratégias de conservação, da organização de livros, da redação de artigos científicos e de documentos técnicos ou de divulgação científica. Nathália adora viajar, escalar  e estar em contato com a natureza. É uma apaixonada pelo Cerrado!<br/><br/><br/><br/>
     <strong><a href="http://lattes.cnpq.br/2608509187003731" target="_blank">Currículo lattes</a></strong><br/>
     <strong>Email:</strong> nathaliamachado@cncflora.net<br/></p>
 </div>
 
 <div class="item">
   <h3>Patrícia da Rosa</h3>
-  <img src=""/>
+  <img src="{{static_url}}/images/equipe/feminino.png"/>
   <p align="justify"> É bióloga, mestre em Botânica pela Escola Nacional de Botânica Tropical - ENBT (2015). Sua experiência concentra-se na área de botânica, com ênfase em taxonomia e sistemática de Melastomataceae, em florística de vegetação campestre do Pampa e da Mata Atlântica. No CNCFlora desempenha a função de analista do Núcleo Lista Vermelha, participando de todos os processos envolvidos na análise de dados e avaliação de risco de extinção da flora brasileira, da redação de artigos científicos e de documentos técnicos ou de divulgação científica. Ela ainda é responsável por organizar e planejar as visitas aos herbários, as expedições à campo e pela coleta e determinação do material botânico. Patrícia adora ouvir samba e música popular brasileira, praticar Yoga e natação, andar de bicicleta, viajar e ir à campo!<br/><br/><br/>
     <strong><a href="http://lattes.cnpq.br/2113703294879709" target="_blank">Currículo lattes</a></strong><br/>
     <strong>Email:</strong> patricia@cncflora.net
