--- a/templates/content/pt-br/project/planejamento-de-acoes.html
+++ b/templates/content/pt-br/project/planejamento-de-acoes.html
@@ -182,7 +182,7 @@
   </div>
 
   <div class="item">
-      <img src=""/>
+      <img src="{{static_url}}/images/equipe/feminino.png"/>
       <p align="justify"><strong>Melissa Bocayuva</strong>
       é bióloga, doutora em Botânica pela Universidade Federal de Viçosa - UFV (2012) com pós-doutorado pela mesma universidade. Sua experiência concentra-se na área de botânica e microbiologia, com ênfase em taxonomia, ecologia e conservação de Orchidaceae, biologia e fisiologia dos microrganismos. No CNCFlora desempenha a função de analista do Núcleo Planejamento de Ações, participando de todos os processos envolvidos na elaboração de estratégias de conservação para a flora ameaçada de extinção, da redação de artigos científicos e de documentos técnicos ou de divulgação científica. Também participa de expedições à campo para coletar material botânico, identificar e registrar as ameaças incidentes sobre a flora.
         <br/>
