--- a/templates/content/pt-br/project/sistemas.html
+++ b/templates/content/pt-br/project/sistemas.html
@@ -38,7 +38,7 @@ Para tanto planejou-se a criação de um sistema de informação para o apoio e 
       </div>
 
       <div class="item">
-          <img src=""/>
+          <img src="{{static_url}}/images/equipe/masculino.png"/>
           <p align="justify"><strong>Humberto Margon</strong>
           é geógrafo, formado pela Pontifícia Universidade Católica do Rio - PUC/Rio (2006), especialista em geoprocessamento e gestão de banco de dados geoespacias. No CNCFlora desempenha a função de analista do Núcleo Sistemas, participando da gestão da base de dados espaciais que subsidia os processos e análises dos demais Núcleos, da organização de dados e metadados espaciais, da aferição de precisão e do georreferenciamento dos registros de ocorrência, da elaboração de mapas e da prospecção de novas geotecnologias. Humberto ama viajar, aprecia uma boa comida e tem um especial interesse em cervejas artesanais!
             <br/>
@@ -46,7 +46,7 @@ Para tanto planejou-se a criação de um sistema de informação para o apoio e 
           </p>
       </div>
       <div class="item">
-          <img src=""/>
+          <img src="{{static_url}}/images/equipe/masculino.png"/>
           <p align="justify"><strong>Ícaro de Carvalho</strong>
           é cientista da computação, formado pela Universidade Federal Fluminense - UFF (2016). Sua experiência está relacionada ao desenvolvimento web, mobile e em metodologias ágeis. Seu trabalho de conclusão de curso foi em computação gráfica e, atualmente, tem interesse em pesquisar modelos gráficos para visualização de informação/dados que possam atender inúmeras áreas de estudo, não apenas para informática. No CNCFlora desempenha a função de analista do Núcleo Sistemas, onde é responsável pela criação e desenvolvimento do portal CNCFlora; pelo desenvolvimento de sistemas, informatização, implementação e gerenciamento de dados e infraestrutura de tecnologia. Ícaro também é jogador de rugby e como todo programador, adora um bom café!
             <br/>
