--- a/templates/content/pt-br/document/relatorios.html
+++ b/templates/content/pt-br/document/relatorios.html
@@ -3,6 +3,17 @@
 
   <div class="col-sm-3 col-md-3 col-lg-3">
     <div class="img">
+      <a href="{{static_url}}/pdf/relatorios/Relatorio_CNCFlora_Anual_2015_HD_final_29_08.pdf">
+        <img src="{{static_url}}/images/documentos/relatorio/relatorio_anual_2015.png"/>
+        <div class="portfolio-overlay">
+          <p>Relatório de Atividades CNCFlora 2015</p>
+        </div>
+      </a>
+    </div>
+  </div>
+
+  <div class="col-sm-3 col-md-3 col-lg-3">
+    <div class="img">
       <a href="{{static_url}}/pdf/relatorios/Relatorio_de_Campo_Grao_Mogol.pdf">
         <img src="{{static_url}}/images/documentos/relatorio/relatorio4.png"/>
         <div class="portfolio-overlay">
@@ -63,7 +74,7 @@
         <div class="portfolio-overlay">
             <p style="font-size:medium; line-height:1.65em">Reunião sobre o projeto: Unidades de Conservação do Estado do
             Rio de Janeiro: análises e estratégias para conservação da flora
-            endêmica ameaçada.</p> 
+            endêmica ameaçada.</p>
         </div>
       </a>
     </div>
