Adicionando link do dspace para o relatório anual de 2015

--- a/templates/content/pt-br/document/relatorios.html
+++ b/templates/content/pt-br/document/relatorios.html
@@ -3,7 +3,7 @@
 
   <div class="col-sm-3 col-md-3 col-lg-3">
     <div class="img">
-      <a href="{{static_url}}/pdf/relatorios/Relatorio_CNCFlora_Anual_2015_HD_final_29_08.pdf">
+      <a href="http://dspace.jbrj.gov.br/jspui/handle/doc/60">
         <img src="{{static_url}}/images/documentos/relatorio/relatorio_anual_2015.png"/>
         <div class="portfolio-overlay">
           <p>Relatório de Atividades CNCFlora 2015</p>
