Incluindo Tamar e resolvendo estilo na ficha da espécie

--- a/templates/content/pt-br/equipe.html
+++ b/templates/content/pt-br/equipe.html
@@ -146,7 +146,7 @@
   <img src="{{static_url}}/images/equipe/Julio.jpeg"/>
   <p align="justify"> É publicitário, bacharel em Propaganda e Marketing pela Pontifícia Universidade Católica de Campinas - PUC/Campinas, com Master of Business Administration (MBA) em Gerenciamento de Projetos pela Fundação Getúlio Vargas. Sua experiência está relacionada ao gerenciamento de projetos, desde a concepção até a implementação com os mecanismos que estabelecem estruturas e indicadores para maior eficiência organizacional. No CNCFlora desempenha a sua função junto à coordenação geral, onde é responsável pelo gerenciamento de projetos (planejamento, implementação, monitoramento e controle das etapas) e de recursos do BID, pela elaboração dos relatórios de gestão,  gestão de custos, cronograma e contratos, pela apresentação de documentos para auditorias, gestão e melhoria de processos (licitações e compras), pelo conflito de gestão e pela organização de eventos. Júlio adora ler e curtir momentos em família!
     <br /><br />
-    <strong>Email:</strong> julioperota@cncflora.net 
+    <strong>Email:</strong> julioperota@cncflora.net
     </p>
 </div>
 
@@ -210,6 +210,14 @@
   <p align="justify"> É bióloga, doutora em Ciências (Ecologia e Recursos Naturais) pela Universidade Federal de São Carlos - UFSCar (2014). Sua experiência concentra-se nas áreas de botânica e ecologia, com ênfase em ecologia de populações e comunidades, em efeito de transições artificiais e em conservação da biodiversidade. No CNCFlora é analista e coordenadora substituta do Núcleo Lista Vermelha, onde participa de todos os processos envolvidos na análise de dados e avaliação de risco de extinção da flora brasileira, da organização de livros, da redação de artigos científicos e de documentos técnicos ou de divulgação científica. Também participa de expedições à campo e é responsável pela avaliação de risco de extinção e por conduzir a análise de dados das espécies novas junto com os botânicos taxonomistas. Raquel é poeta (adora haicais), adora dias quentes e ensolarados, correr, ir à praia e falar da vida, de música, arte e política com os amigos!<br/><br/>
   <strong><a href="http://buscatextual.cnpq.br/buscatextual/visualizacv.do?metodo=apresentar&id=K4717594P3" target="_blank">Currículo lattes</a></strong><br/>
   <strong>Email:</strong> raquel@cncflora.net
+    </p>
+</div>
+
+<div class="item">
+  <h3>Tamar Bajgielman</h3>
+  <img src="{{static_url}}/images/equipe/Tamar.jpg"/>
+  <p align="justify"> É bióloga, doutora em Antropologia pela University of Kent (2005) com pós-doutorado pelo Museu Nacional - UFRJ. Sua experiência e interesses profissionais estão relacionados a área de antropologia ambiental, com ênfase em ecologia política, etnoecologia, conservação e manejo de recursos naturais, pesca artesanal, agricultura, propriedade coletiva e acesso a recursos produtivos. No CNCFlora é pesquisadora colaboradora do Núcleo Conservação Ex Situ, onde participa dos processos de elaboração de estratégias de conservação para a flora ameaçada de extinção, de organização de livros, redação de artigos científicos e documentos técnicos. Tamar adora ler, meditar, fazer cerâmica e estar em contato com plantas e bichos silvestres!<br/><br/><br/>
+  <strong>Email:</strong> tamar.rio@gmail.com
     </p>
 </div>
 
