--- a/templates/content/pt-br/project/ex-situ.html
+++ b/templates/content/pt-br/project/ex-situ.html
@@ -64,13 +64,23 @@
 
     <div class="item">
       <img src="{{static_url}}/images/equipe/Maria.jpg"/>
-      <p align="justify"><strong>Maria Lúcia Moreira Nova da Costa</strong> 
+      <p align="justify"><strong>Maria Lúcia Moreira Nova da Costa</strong>
         é engenheira florestal, doutora em Botânica pela Escola Nacional de Botânica Tropical - ENBT (2014). É servidora na função de Tecnologista Senior III do Instituto de Pesquisa Jardim Botânico do Rio de Janeiro. Sua experiência e interesses profissionais estão relacionados a conservação, ao fortalecimento de jardins botânicos e a espécies ameaçadas. No CNCFlora desempenha a função de coordenadora substituta e  coordenadora do Núcleo Conservação Ex Situ, onde participa dos processos de elaboração de estratégias de conservação para a flora ameaçada de extinção, de organização de livros,  redação de artigos científicos e  documentos técnicos. Maria Lúcia adora viajar, reunir amigos, dançar, fazer artesanato, programas ao ar livre e um monte de outras coisas!
         <br/>
         <strong><a href="http://lattes.cnpq.br/0490128192133616" target="_blank">Currículo lattes</a></strong><br/>
         <strong>Email:</strong> lucianova@gmail.com<br/>
       </p>
-      </div>
+    </div>
+
+    <div class="item">
+      <img src="{{static_url}}/images/equipe/Tamar.jpg"/>
+      <p align="justify"><strong>Tamar Bajgielman</strong>
+        é bióloga, doutora em Antropologia pela University of Kent (2005) com pós-doutorado pelo Museu Nacional - UFRJ. Sua experiência e interesses profissionais estão relacionados a área de antropologia ambiental, com ênfase em ecologia política, etnoecologia, conservação e manejo de recursos naturais, pesca artesanal, agricultura, propriedade coletiva e acesso a recursos produtivos. No CNCFlora é pesquisadora colaboradora do Núcleo Conservação Ex Situ, onde participa dos processos de elaboração de estratégias de conservação para a flora ameaçada de extinção, de organização de livros, redação de artigos científicos e documentos técnicos. Tamar adora ler, meditar, fazer cerâmica e estar em contato com plantas e bichos silvestres!
+        <br/>
+        <strong><a href="http://lattes.cnpq.br/8736512803117112" target="_blank">Currículo lattes</a></strong><br/>
+        <strong>Email:</strong> tamar.rio@gmail.com<br/>
+      </p>
+    </div>
   </div>
 </div>
 
